corpus/tests.txt
================================================================================
Basics
================================================================================

{}
{asdf}
asdf{}asdf
asdf{asdf}asdf

--------------------------------------------------------------------------------

(source_file
  (string_content
    (matching_curlies)
    (matching_curlies
      (everything_else_inside))
    (matching_curlies)
    (matching_curlies
      (everything_else_inside))))

================================================================================
Whitespace
================================================================================

 { }
{as df }
asdf{          }asdf
asdf{ a s d f}asdf

--------------------------------------------------------------------------------

(source_file
  (string_content
    (matching_curlies)
    (matching_curlies
      (everything_else_inside))
    (matching_curlies)
    (matching_curlies
      (everything_else_inside))))

================================================================================
Multiline
================================================================================

{
}
{
asdf
}
asdf{
}asdf
asdf{as
df}asdf

--------------------------------------------------------------------------------

(source_file
  (string_content
    (matching_curlies)
    (matching_curlies
      (everything_else_inside))
    (matching_curlies)
    (matching_curlies
      (everything_else_inside))))

================================================================================
Bad curlies
================================================================================


--------------------------------------------------------------------------------

(source_file)
